--- a/src/web/admins/templates/admins/event_detail.html
+++ b/src/web/admins/templates/admins/event_detail.html
@@ -20,8 +20,10 @@
             </p>
         </div>
         <div class="col-sm-6 text-right">
-            <a class="btn btn-primary" href="/admin/lucky_draw/event/{{ object.id }}/change/"><i class="fa fa-edit"></i> Edit</a>
-            <a class="btn btn-danger" href="{% url 'admins:event-delete' object.id %}"><i class="fa fa-trash"></i> Delete</a>
+            <a class="btn btn-primary" href="/admin/lucky_draw/event/{{ object.id }}/change/"><i class="fa fa-edit"></i>
+                Edit</a>
+            <a class="btn btn-danger" href="{% url 'admins:event-delete' object.id %}"><i class="fa fa-trash"></i>
+                Delete</a>
         </div>
     </div>
 
@@ -136,32 +138,85 @@
 
         {# RESULTS #}
         <div class="col-sm-4">
-            <div class="card text-center">
+            <div class="card">
+
                 <div class="card-body border-bottom">
-                    <h5 class="mb-0">Winner</h5>
+                    <div class="row">
+                        <div class="col-6">
+                            <h5 class="mb-0">Winner</h5>
+                        </div>
+
+                        <div class="col-6 text-right">
+                            <h5 class="mb-0">
+                                {% if object.status == 'completed' %}
+                                    <a href="{% url 'admins:lucky-draw-winner' object.id %}">
+                                        <b><i class="fa fa-eye"></i> Open</b>
+                                    </a> |
+                                    <a href="{% url 'admins:event-result' object.result.id %}">
+                                        <b><i class="fa fa-edit"></i> Edit</b>
+                                    </a>
+                                {% endif %}
+                            </h5>
+                        </div>
+                    </div>
                 </div>
+
                 <div class="card-body">
                     {% if object.status == 'completed' %}
                         <div class="text-center">
-                            <img src="{% static 'animate.gif' %}" height="150" width="auto" alt="animate-winner">
-                            <div>
-                                <h5>Token ID!</h5>
-                                <h2>{{ object.result.participant.token_number }}</h2>
+                            {% if object.result.image %}
+                                <img src="{{ object.result.image.url }}" height="150" width="auto"
+                                     class="rounded-circle" alt="animate-winner">
+                            {% else %}
+                                <img src="{% static 'animate.gif' %}" height="150" width="auto" alt="animate-winner">
+                            {% endif %}
+                            <div class="mt-4">
+                                <input name="winner-url" id="winner-url" value="{{ base_url }}" type="url"
+                                       hidden="hidden">
+                                <h3>{{ object.result.full_name|check_null }}</h3>
+                                <h5>{{ object.result.participant.token_number }}</h5>
                             </div>
                         </div>
                     {% else %}
-                        <h1 class="text-danger mb-0"><i class="fa fa-times"></i></h1>
-                        <p class="text-danger mb-0">
-                            <b>
-                                This event isn't spurned yet.
-                            </b>
-                        </p>
-                        <p class="mb-1">Click here to start/Spun</p>
-                        <a href="{% url 'admins:lucky-draw' object.id %}" class="btn btn-success">
-                            Spun Now
-                        </a>
+                        <div class="text-center">
+                            <h1 class="text-danger mb-0"><i class="fa fa-times"></i></h1>
+                            <p class="text-danger mb-0">
+                                <b>
+                                    This event isn't spurned yet.
+                                </b>
+                            </p>
+                            <p class="mb-1">Click here to start/Spun</p>
+                            <a href="{% url 'admins:lucky-draw' object.id %}" class="btn btn-success">
+                                Spun Now
+                            </a>
+                        </div>
                     {% endif %}
                 </div>
+
+                {% if object.status == 'completed' %}
+                    <div class="card-body border-top">
+                        <div class="row">
+
+                            <div class="col-6 text-center border-right">
+                                <p class="mb-0">
+                                    <button class="btn btn-light" id="copy-btn">
+                                        <b><i class="fa fa-copy"></i> Copy Link</b>
+                                    </button>
+                                </p>
+                            </div>
+
+                            <div class="col-6 text-center">
+                                <p class="mb-0">
+                                    <button class="btn btn-light text-success" id="share-Whatsapp">
+                                        <b><i class="fa fa-phone"></i> Share on Whatsapp</b>
+                                    </button>
+                                </p>
+                            </div>
+
+                        </div>
+                    </div>
+                {% endif %}
+
             </div>
         </div>
 
@@ -169,3 +224,30 @@
 
 {% endblock %}
 
+
+{% block js_code %}
+    <script>
+        $(document).ready(function () {
+
+            $('#copy-btn').click(function () {
+                copyUrlToClipBoard();
+            });
+
+            $('#share-Whatsapp').click(function () {
+                let url = document.getElementById("winner-url").value;
+                let message = "Let's find the winner of Event {{ object.name }}! Visit the link below to view the official announcement:\n\n" + url;
+                window.open('https://api.whatsapp.com/send?text=' + encodeURIComponent(message), '_blank');
+            });
+
+            function copyUrlToClipBoard() {
+                let copyText = document.getElementById("winner-url");
+
+                copyText.select();
+                copyText.setSelectionRange(0, 99999); // For mobile devices
+
+                navigator.clipboard.writeText(copyText.value);
+                alert("Copied: " + copyText.value);
+            }
+        });
+    </script>
+{% endblock %}
