--- a/src/web/admins/templates/admins/lucky_draw.html
+++ b/src/web/admins/templates/admins/lucky_draw.html
@@ -10,7 +10,7 @@
     <style>
 
         #countdown {
-            font-size: 36px; /* Adjust font size as needed */
+            font-size: 36px;
             font-weight: bold;
         }
     </style>
@@ -35,11 +35,10 @@
             <div class="row justify-content-center">
                 <div class="col-md-8 col-lg-6 col-xl-5">
 
-
                     <div class="row justify-content-center mt-4">
                         <div class="cols text-center">
                             <img src="{% static 'core/images/logos/logo.png' %}" height="100" class="mb-3"
-                                 id="spin-image">
+                                 id="spin-image" alt="">
                             <p class="mb-0">EVENT #{{ object.id }}</p>
                             <p class="h1 text-success mb-5">WinnieSpin</p>
                             <p class="h1 mb-0 text-secondary text-shadow1"
