UPDT: changes to images

--- a/src/web/admins/templates/admins/event_list.html
+++ b/src/web/admins/templates/admins/event_list.html
@@ -47,12 +47,12 @@
                             <table class="table table-borderless table-hover">
                                 <thead class="border-bottom">
                                 <tr>
-                                    <th><i class="mdi mdi-tent"></i> Name</th>
-                                    <th><i class="mdi mdi-library"></i> Type</th>
-                                    <th><i class="mdi mdi-nature-people"></i> Participants</th>
-                                    <th><i class="mdi mdi-check"></i> Status</th>
-                                    <th><i class="bx bx-bell bx-tada"></i> Spurned On</th>
-                                    <th>-</th>
+                                    <th><h6><i class="mdi mdi-tent"></i> Name</h6></th>
+                                    <th><h6><i class="mdi mdi-library"></i> Type</h6></th>
+                                    <th><h6><i class="mdi mdi-nature-people"></i> Participants</h6></th>
+                                    <th><h6><i class="mdi mdi-check"></i> Status</h6></th>
+                                    <th><h6><i class="bx bx-bell bx-tada"></i> Spurned On</h6></th>
+                                    <th><h6>-</h6></th>
                                 </tr>
                                 </thead>
 
