--- a/src/web/admins/templates/admins/event_detail.html
+++ b/src/web/admins/templates/admins/event_detail.html
@@ -20,10 +20,12 @@
             </p>
         </div>
         <div class="col-sm-6 text-right">
-            <a class="btn btn-primary" href="/admin/lucky_draw/event/{{ object.id }}/change/"><i class="fa fa-edit"></i>
-                Edit</a>
-            <a class="btn btn-danger" href="{% url 'admins:event-delete' object.id %}"><i class="fa fa-trash"></i>
-                Delete</a>
+            <a class="btn btn-primary" href="/admin/lucky_draw/event/{{ object.id }}/change/">
+                <i class="fa fa-edit"></i> Edit
+            </a>
+            <a class="btn btn-danger" href="{% url 'admins:event-delete' object.id %}">
+                <i class="fa fa-trash"></i> Delete
+            </a>
         </div>
     </div>
 
@@ -33,9 +35,10 @@
             <div class="card">
                 <div class="card-body">
 
-                    {# TOP DETAILS #}
+                    {# HEADER #}
                     <div class="text-center mt-2">
-                        <img src="https://placehold.co/200?text=E" height="150" class="rounded-circle border p-1">
+                        <img alt="logo" src="{% static 'core/images/logos/logo.png' %}" height="150"
+                             class="rounded-circle border p-1">
                         <h3 class="mt-4 mb-0">
                             <b>{{ object.name }}</b>
                         </h3>
