UPDT: more changes

--- a/src/web/admins/templates/admins/lucky_draw.html
+++ b/src/web/admins/templates/admins/lucky_draw.html
@@ -30,10 +30,10 @@
         </a>
     </div>
 
-    <div class="account-pages mx-5 py-5">
+    <div class="account-pages mx-2 py-5">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-md-8 col-lg-6 col-xl-5">
+                <div class="col-md-10 col-lg-10 col-xl-8">
 
                     <div class="row justify-content-center mt-4">
                         <div class="cols text-center">
@@ -41,10 +41,14 @@
                                  id="spin-image" alt="">
                             <p class="mb-0">EVENT #{{ object.id }}</p>
                             <p class="h1 text-success mb-5">WinnieSpin</p>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-12 text-center" style="border: 10px solid lightgrey; border-radius: 10px;">
                             <p class="h1 mb-0 text-secondary text-shadow1"
-                               style="padding: 10px; text-shadow: grey; font-size: 60px; border: 10px solid lightgrey; border-radius: 10px;"
-                               id="spin-data">
-                                |||||||||||||||||||||||
+                               id="spin-data" style="padding: 10px; text-shadow: grey; font-size: 40px;overflow: hidden">
+                                |||||||||||||||||||||||||||||||||||||||
                             </p>
                         </div>
                     </div>
